--- a/views/books.ejs
+++ b/views/books.ejs
@@ -14,14 +14,14 @@
             <th>Author</th>
             <th>Action</th>
         </tr>
-            <% for(var i = 0; books.length; i++) {%>
+            <% for(var i=0; i < books.length; i++) {%>
             <tr>
                 <td><%= books[i].title %></td>
                 <td><%= books[i].author %></td>
             <td>
-                <a href="/book/<%= books[i].id %>"></a>
-                <a href="/update/<%= books[i].id %>"></a>
-                <a href="/delete/<%= books[i].id %>"></a>
+                <a href="/book/<%= books[i].id %>">View</a>
+                <a href="/update/<%= books[i].id %>">Edit</a>
+                <a href="/delete/<%= books[i].id %>">Delete</a>
             </td>
             </tr>
         <% } %>
